changed background position for mobile

--- a/src/Home.css
+++ b/src/Home.css
@@ -391,11 +391,10 @@ margin-left: 1vw;
         width: 100vw;
         background-image: url("../public/basicbankfamily3.jpg");
         background-repeat: no-repeat;
-        background-position-x: right;
-        background-position-y: bottom;
+        background-position-x: center;
+        background-position-y: center;
         background-color:rgb(139, 110, 35);
         background-blend-mode: var(#ba8c43);
-        background-image: radial-gradient();
         background-blend-mode: screen;
         opacity: 90%;
         border-top: solid 1px orange;
