--- a/src/Home.css
+++ b/src/Home.css
@@ -415,6 +415,7 @@ margin-left: 1vw;
     }
     
     .sloganSection{
+        display: none;
         margin-top: 14vh;
         height: 50vh;
         width: 25vw;
