--- a/src/Home.css
+++ b/src/Home.css
@@ -313,7 +313,7 @@ margin-left: 1vw;
         margin-top: 5vh;
         border-radius: 20px;
         width: 100px;
-        margin-right: 5rem;
+        margin-right: 2rem;
         color: rgb(3, 17, 42);
         font-weight: 900;
         letter-spacing: 1px;
@@ -400,8 +400,6 @@ margin-left: 1vw;
         border-top: solid 1px orange;
         display: flex;
         flex-direction: row;
-        border: solid 2px green;
-
     }
     
     .siginInSection{
@@ -430,9 +428,9 @@ margin-left: 1vw;
     .username{
         display: flex;
         height: 6vh;
-        width: 20vw;
+        width: 15rem;
         margin-top: 6.5vh;
-        margin-left: 3.5vw;
+        margin-left: 5vw;
         background-color: rgb(3, 17, 42);
         border: none;
         border-bottom: solid 2px white;
@@ -445,9 +443,9 @@ margin-left: 1vw;
     .password{
         display: flex;
         height: 6vh;
-        width: 20vw;
+        width: 15rem;
         margin-top: 2vh;
-        margin-left: 3.5vw;
+        margin-left: 5vw;
         background-color: rgb(3, 17, 42);
         border: none;
         border-bottom: solid 2px white;
@@ -459,7 +457,7 @@ margin-left: 1vw;
     
     .submitButton{
         background-color: rgb(3, 17, 42);
-        margin-left: 3.5vw;
+        margin-left: 5vw;
         margin-top: 4vh;
         border-color: white;
         border: 1px solid;
