aded margin  of 0 auto and font size of 3 rem for the mobile layout

--- a/src/components/AccountCard.css
+++ b/src/components/AccountCard.css
@@ -100,9 +100,9 @@ align-self: center;
     }
     
     .accountType{
-        margin-left: 12vw;
+        margin: 0 auto;
         margin-top: 4vh;
-        font-size: 20px;
+        font-size: 3rem;
     }
     
     .accountNumber{
