added a margin of 0 auto for the accountNumber on the mobile layout

--- a/src/components/AccountCard.css
+++ b/src/components/AccountCard.css
@@ -106,7 +106,7 @@ align-self: center;
     }
     
     .accountNumber{
-        margin-left: 10vw;
+        margin: 0 auto;
         margin-top: 1vh;
     }
     
