changed goldLine to 15 rem on the moblie layout

--- a/src/components/AccountCard.css
+++ b/src/components/AccountCard.css
@@ -113,7 +113,7 @@ align-self: center;
     
     .goldLine{
     border-bottom: solid 8px rgb(139, 110, 35);
-    width: 14vw;
+    width: 15rem;
     margin-left: 8vw;
     margin-top: 1.5vh;
     }
