changed the display to flex on the accountcard buttons

--- a/src/components/AccountCard.css
+++ b/src/components/AccountCard.css
@@ -131,6 +131,7 @@ align-self: center;
     
     .accountButtons{
         margin: 0 auto;
+        display: flex;
     }
     
     .accountCardDepositButton{
