changed flex direction to column

--- a/src/components/AccountCard.css
+++ b/src/components/AccountCard.css
@@ -132,6 +132,7 @@ align-self: center;
     .accountButtons{
         margin: 0 auto;
         display: flex;
+        flex-direction: column;
     }
     
     .accountCardDepositButton{
