--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -1,8 +1,14 @@
 
+.fullAccountsPage{
+    width: 28rem;
+    height: 100vh;
+    border: solid 2px orange;
+}
+
 
 .topHeader{
     height: 12vh;
-    width: 100vw;
+    width: 100%;
     background-color: rgb(3, 17, 42);
     border: solid 2px;
     display: flex;
