--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -36,7 +36,7 @@
 .infoSection{
     display: flex;
     flex-direction: row;
-    width: 100vw;
+    width: 100%;
     font-size: 20px;
     height: 10vh;
     background-color: rgb(236, 228, 228);
