changed the bottomsection to 28 rem

--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -73,7 +73,7 @@
 .bottomsection{
     display: flex;
     flex-direction: column;
-    width: 100vw;
+    width: 28rem;
     font-size: 20px;
     height: 78vh;
     background-color: rgb(3, 17, 42);
@@ -94,7 +94,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    width: 100vw;
+    width: 100%;
     height: 78vh;
     background-image: url("../../public/better\ bridge.jpg");
     background-repeat: no-repeat;
