added borders to the open and delete section to see where they sit on the dom

--- a/src/components/Accounts.css
+++ b/src/components/Accounts.css
@@ -402,6 +402,18 @@ margin-top: .35vh;
     color:rgb(3, 17, 42);
     margin-top: 2vh;
     color: black;
+    border: solid 2px green;
+}
+
+
+
+.divider{
+    border: solid 2px red;
+}
+
+
+.open{
+    border: solid 2px silver;
 }
 
 .bottomsection{
