change the width to 100% on the moblie open component

--- a/src/components/OpenComponent.css
+++ b/src/components/OpenComponent.css
@@ -117,7 +117,7 @@
     background-color: rgb(3, 17, 42);
     border: solid 4px rgb(139, 110, 35);
     height: 30rem;
-    width: 20rem;
+    width: 100%;
     margin: 0 auto;
     overflow: hidden;
     border: solid 2px green;
