--- a/src/components/OpenComponent.css
+++ b/src/components/OpenComponent.css
@@ -120,7 +120,6 @@
     width: 100%;
     margin: 0 auto;
     overflow: hidden;
-    border: solid 2px green;
 }
 
 .openTopArea{
@@ -139,15 +138,17 @@
 .opencreateUserSection{
     display: flex;
     height: 30vh;
+    width: 23rem;
     flex-direction: row;
     margin: 2vh;
+    margin-left: 3vw;
     border: solid 2px brown;
 }
 
 
 .openAccountType{
     margin: 2vh;
-    width: 8rem;
+    width: 10rem;
     border: solid 2px brown;
 
 }
