made the open depsoti class 10 rem

--- a/src/components/OpenComponent.css
+++ b/src/components/OpenComponent.css
@@ -172,7 +172,8 @@
 
 .opendepositclass{
     margin: 1.5vh;
-    width: 12vw;
+    width: 10rem;
+    border: solid 2px green;
 }
 
 .openDepositPlaceholder{
