--- a/src/components/DepositComponent.css
+++ b/src/components/DepositComponent.css
@@ -187,16 +187,17 @@ margin-top: 3vh;
         font-size: 40px;
         color: white;
         font-family: 'Titan One', cursive;
-        width: 8vw;
+        width: 12rem;
         padding-left: .5vw;
         margin-top: 1vh;
+
     }
     
     .depositField::placeholder{
         background-color: #414E65;
         height: 10vh;
         font-size: 35px;
-        width: 8vw;
+        width: 12rem;
         color: white;
         font-family: 'Titan One', cursive;
         border: solid 1px #414E65;
