--- a/src/components/DepositComponent.css
+++ b/src/components/DepositComponent.css
@@ -141,7 +141,7 @@ margin-top: 3vh;
         color: white;
         margin-left: 20vw;
         margin-bottom: 2vh;
-        margin-top: .8vh;
+        margin-top: 5vh;
     }
     
     .depositSection{
