--- a/src/components/DepositComponent.css
+++ b/src/components/DepositComponent.css
@@ -204,7 +204,7 @@ margin-top: 3vh;
     }
     
     .depositButton{
-    width: 20vw;
+    width: 12rem;
     height: 8vh;
     background-color: white;
     border: solid 3px rgb(3, 17, 42);
@@ -218,6 +218,8 @@ margin-top: 3vh;
     border-radius: 10px;
     align-self: center;
     margin-top: 3vh;
+    border: solid 2px green;
+
     }
     
 
