--- a/src/components/DepositConfirmation.css
+++ b/src/components/DepositConfirmation.css
@@ -83,5 +83,88 @@
 
 @media screen and (max-width: 576px)
 {
+   
     
+.thefulldepositComponent{
+    background-image: linear-gradient(45.34deg, rgb(0, 16, 43) 5.66%, #10203b 94.35%);
+    height: 60vh;
+    display: flex;
+    flex-direction: column;
+    z-index: 10;
+}
+
+.thetoprow{
+    display: flex;
+    flex-direction: row;
+    margin-top: 1vh;
+    border: solid 2px pink;
+}
+
+.theXout{
+    margin-left: 2vw;
+    color: white;
+    height: 3vh;
+    font-size: 30px;
+    font-weight: 600;
+}
+
+.depositConfrimationHeader{
+    font-family: 'Titan One', cursive;
+    letter-spacing: 1px;
+    font-size: 32px;
+    color: white;
+    margin-left: 10vw;
+    margin-bottom: 2vh;
+    margin-top: 2.5vh;
+    width: 17rem;
+    height: 10vh;
+
+}
+
+.thedepositSection{
+    display: flex;
+    flex-direction: column;
+    background-color: #414E65;
+    height: 20vh;
+    width: 20vw;
+    align-self: center;
+    margin-top: 2vh;
+    margin-left: 2vh;
+    border-radius: 8px;
+}
+
+.thedepositSectionHeader{
+    height: 5vh;
+    color: white;
+}
+
+.thedepositField{
+    background-color: #414E65;
+    font-size: 21px;
+    color: rgb(250, 242, 242);
+    font-family: 'Titan One', cursive;
+    border: solid 1px #414E65;
+    height: 14vh;
+    width: 19vw;
+    align-self: center;
+}
+
+.thedepositField::placeholder{
+    background-color: #414E65;
+    height: 10vh;
+    font-size: 30px;
+    color: white;
+    font-family: 'Titan One', cursive;
+    margin-left: 1vw;
+    border: solid 1px #414E65;
+}
+
+.thedepositButton{
+    background-color: rgb(139, 110, 35);
+    font-size: 18px;
+    border-radius: 10px;
+    align-self: center;
+}
+
+
 }
