--- a/src/components/WithdrawComponent.css
+++ b/src/components/WithdrawComponent.css
@@ -103,3 +103,115 @@
     font-weight: 700;
     letter-spacing: .1vw;
 }
+
+
+@media screen and (max-width: 576px)
+{
+
+
+
+    .fullWithdrawComponent{
+        background-image: linear-gradient(45.34deg, rgb(0, 16, 43) 5.66%, #10203b 94.35%);
+        height: 60vh;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .toprow{
+        display: flex;
+        flex-direction: row;
+        margin-top: 1vh;
+    }
+    
+    .Xout{
+        margin-left: 2vw;
+        color: white;
+        height: 3vh;
+        font-size: 30px;
+        font-weight: 600;
+    }
+    
+    .withdrawHeader{
+        font-family: 'Titan One', cursive;
+        letter-spacing: 1px;
+        font-size: 40px;
+        color: white;
+        margin-left: 2vw;
+        margin-bottom: 2vh;
+        margin-top: .8vh;
+    }
+    
+    .withdrawSection{
+        display: flex;
+        flex-direction: column;
+        background-color: #414E65;
+        height: 20vh;
+        width: 20vw;
+        align-self: center;
+        margin-top: 3vh;
+        border-radius: 8px;
+        margin-bottom: 3vh;
+    }
+    
+    .withdrawFieldSection{
+        display: flex;
+        flex-direction: row;
+        width: 18vw;
+        height: 12vh;
+    }
+    
+    .withdrawSectionHeader{
+        height: 5vh;
+        color: white;
+        align-self: center;
+        margin-top: 2vh;
+    }
+    
+    .withdrawDollarSign{
+        align-self: center;
+        color: rgb(139, 110, 35);
+        font-size: 50px;
+        margin-left: 3.5vw;
+        font-weight: 800;
+        padding-right: .5vw;
+    }
+    
+    .withdrawField{
+        background-color: #414E65;
+        align-content: center;
+        height: 10vh;
+        font-size: 40px;
+        color: white;
+        font-family: 'Titan One', cursive;
+        width: 8vw;
+        padding-left: .5vw;
+        margin-top: 1vh;
+    }
+    
+    .withdrawField::placeholder{
+        background-color: #414E65;
+        height: 10vh;
+        font-size: 35px;
+        width: 8vw;
+        color: white;
+        font-family: 'Titan One', cursive;
+        margin-left: 1vw;
+        border: solid 1px #414E65;
+    }
+    
+    .withdrawComponentButton{
+        background-color: rgb(139, 110, 35);
+        font-size: 18px;
+        border-radius: 10px;
+        align-self: center;
+        margin-top: 3vh;
+        height: 8vh;
+        width: 20vw;
+        color: rgb(3, 17, 42);
+        border: solid 1px rgb(3, 17, 42);
+        font-weight: 700;
+        letter-spacing: .1vw;
+    }
+    
+
+}
