--- a/src/components/WithdrawComponent.css
+++ b/src/components/WithdrawComponent.css
@@ -139,7 +139,6 @@
         margin-left: 15vw;
         margin-bottom: 2vh;
         margin-top: 4vh;
-        border: solid 2px green;
     }
     
     .withdrawSection{
@@ -147,11 +146,13 @@
         flex-direction: column;
         background-color: #414E65;
         height: 20vh;
-        width: 20vw;
+        width: 18rem;
         align-self: center;
         margin-top: 3vh;
         border-radius: 8px;
         margin-bottom: 3vh;
+        border: solid 2px green;
+
     }
     
     .withdrawFieldSection{
