--- a/src/components/WithdrawComponent.css
+++ b/src/components/WithdrawComponent.css
@@ -186,14 +186,13 @@
         width: 12rem;
         padding-left: .5vw;
         margin-top: 1vh;
-        border: solid 2px green;
     }
     
     .withdrawField::placeholder{
         background-color: #414E65;
         height: 10vh;
         font-size: 35px;
-        width: 8vw;
+        width: 8rem;
         color: white;
         font-family: 'Titan One', cursive;
         margin-left: 1vw;
