--- a/src/components/WithdrawComponent.css
+++ b/src/components/WithdrawComponent.css
@@ -206,11 +206,13 @@
         align-self: center;
         margin-top: 3vh;
         height: 8vh;
-        width: 20vw;
+        width: 14rem;
         color: rgb(3, 17, 42);
         border: solid 1px rgb(3, 17, 42);
         font-weight: 700;
         letter-spacing: .1vw;
+        border: solid 2px green;
+
     }
     
 
