added margin left

--- a/src/components/WithdrawConfirmation.css
+++ b/src/components/WithdrawConfirmation.css
@@ -28,10 +28,10 @@
     letter-spacing: 1px;
     font-size: 32px;
     color: white;
-    margin-left: 1vw;
+    margin-left: 7vw;
     margin-bottom: 2vh;
     margin-top: 2.5vh;
-    width: 20vw;
+    width: 18rem;
     height: 10vh;
 }
 
