--- a/src/components/WithdrawConfirmation.css
+++ b/src/components/WithdrawConfirmation.css
@@ -60,6 +60,9 @@
     color: white;
     font-family: 'Titan One', cursive;
     border: solid 1px #414E65;
+    border: solid 2px green;
+    width: 17rem;
+    margin-left: 1vw;
 }
 
 .thewithdrawField::placeholder{
