--- a/src/components/TransferComponent.css
+++ b/src/components/TransferComponent.css
@@ -110,3 +110,125 @@
     border-radius: 12px;
     color: white;
 }
+
+
+@media screen and (max-width: 576px)
+{
+
+    .fullTransferComponent{
+        height: 65vh;
+        background-image: linear-gradient(#03112A 70%, rgb(28, 28, 88));
+        width: 30vw;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .transferTop{
+        display: flex;
+        flex-direction: row;
+    }
+    
+    .transferTextheader{
+        font-family: 'Dosis', sans-serif;
+        font-weight: 700;
+        font-size: 45px;
+        color: white;
+        margin-left: 7vw;
+    }
+    
+    .transferAmountField{
+        display: flex;
+        flex-direction: row;
+        background-color: #414E65;
+        height: 16vh;
+        width: 22vw;
+        margin-left: 9vh;
+        margin-top: 3vh;
+        border-radius: 12px;
+    }
+    
+    .transferDollarSign{
+        color: rgb(139, 110, 35);
+        height: 12vh;
+        width: 3vw;
+        font-size: 50px;
+        align-self: center;
+        text-align: center;
+        margin-top: 1vh;
+        margin-left: 1vw;
+    }
+    
+    
+    .transferInput{
+        background-color: #414E65;
+        height: 12vh;
+        align-self: center;
+        color: white;
+        font-size: 50px;
+        width: 14vw;
+        align-content: center;
+    }
+    
+    .transferFromToField{
+        display: flex;
+        flex-direction: column;
+        background-color: #414E65;
+        height: 16vh;
+        width: 22vw;
+        margin-left: 9vh;
+        margin-top: 3vh;
+        border-radius: 12px;
+    }
+    
+    .transferDecorativeLine{
+        height: 1vh;
+        background-color: goldenrod;
+    }
+    
+    .transferFromToTop{
+        height: 6vh;
+        color: white;
+        width: 15vw;
+        font-size: 25px;
+        align-self: center;
+        margin-left: 2vw;
+        margin-top: 2vh;
+    }
+    
+    .transferFromToBottom{
+        display: flex;
+        flex-direction: row;
+    }
+    
+    .transferToWord{
+        margin-left: 1.5vw;
+        font-weight: 700;
+        color: rgb(224, 196, 36);
+        font-size: 30px;
+        letter-spacing: .1vw;
+    }
+    
+    .transferDropDown{
+        border: solid 1px black;
+        width: 12vw;
+        margin-left: .5vw;
+        margin-top: .5vh;
+        background-color: #414E65;
+        font-size: 24px;
+        color: white;
+    }
+    
+    .transferButton{
+        background-color: #414E65;
+        height: 7vh;
+        width: 22vw;
+        margin-left: 9.3vh;
+        margin-top: 3vh;
+        border-radius: 12px;
+        color: white;
+    }
+    
+    
+
+
+}
