--- a/src/components/TransferComponent.css
+++ b/src/components/TransferComponent.css
@@ -118,9 +118,10 @@
     .fullTransferComponent{
         height: 65vh;
         background-image: linear-gradient(#03112A 70%, rgb(28, 28, 88));
-        width: 30vw;
+        width: 25rem;
         display: flex;
         flex-direction: column;
+        border: solid 2px green;
     }
     
     .transferTop{
