changed the transfer inputs width to 11 rem

--- a/src/components/TransferComponent.css
+++ b/src/components/TransferComponent.css
@@ -165,8 +165,9 @@
         align-self: center;
         color: white;
         font-size: 50px;
-        width: 14vw;
+        width: 11rem;
         align-content: center;
+        border: solid 2px green;
     }
     
     .transferFromToField{
