changed the height to .3 rem

--- a/src/components/TransferComponent.css
+++ b/src/components/TransferComponent.css
@@ -181,7 +181,7 @@
     }
     
     .transferDecorativeLine{
-        height: 1vh;
+        height: .3rem;
         background-color: goldenrod;
     }
     
