change the size of the transfer from to top to 26px

--- a/src/components/TransferComponent.css
+++ b/src/components/TransferComponent.css
@@ -188,7 +188,7 @@
     .transferFromToTop{
         height: 6vh;
         color: white;
-        width: 15vw;
+        width: 12rem;
         font-size: 25px;
         align-self: center;
         margin-left: 2vw;
