added margin to p to the transfer from to bottom

--- a/src/components/TransferComponent.css
+++ b/src/components/TransferComponent.css
@@ -198,6 +198,8 @@
     .transferFromToBottom{
         display: flex;
         flex-direction: row;
+        border: solid 2px green;
+        margin-top: 1vh;
     }
     
     .transferToWord{
