--- a/src/components/TransferComponent.css
+++ b/src/components/TransferComponent.css
@@ -198,7 +198,6 @@
     .transferFromToBottom{
         display: flex;
         flex-direction: row;
-        border: solid 2px green;
         margin-top: 1vh;
     }
     
@@ -218,6 +217,8 @@
         background-color: #414E65;
         font-size: 24px;
         color: white;
+        border: solid 2px gold;
+
     }
     
     .transferButton{
