changed the width of the transfer dropdown to 12 fem

--- a/src/components/TransferComponent.css
+++ b/src/components/TransferComponent.css
@@ -211,7 +211,7 @@
     
     .transferDropDown{
         border: solid 1px black;
-        width: 12vw;
+        width: 12rem;
         margin-left: .5vw;
         margin-top: .5vh;
         background-color: #414E65;
