changed the transfer dropdown to 12 rem the usual

--- a/src/components/TransferComponent.css
+++ b/src/components/TransferComponent.css
@@ -212,13 +212,11 @@
     .transferDropDown{
         border: solid 1px black;
         width: 12rem;
-        margin-left: .5vw;
+        margin-left: 2vw;
         margin-top: .5vh;
         background-color: #414E65;
         font-size: 24px;
         color: white;
-        border: solid 2px gold;
-
     }
     
     .transferButton{
