--- a/src/components/TransferComponent.css
+++ b/src/components/TransferComponent.css
@@ -222,7 +222,7 @@
     .transferButton{
         background-color: #414E65;
         height: 7vh;
-        width: 22vw;
+        width: 15rem;
         margin-left: 9.3vh;
         margin-top: 3vh;
         border-radius: 12px;
