--- a/src/components/TransferConfirmation.css
+++ b/src/components/TransferConfirmation.css
@@ -89,10 +89,11 @@
   
     .fullCompleteTransferComponent{
         height: 55vh;
-        width: 30vw;
+        width: 25rem;
         display: flex;
         flex-direction: column;
         background-image: linear-gradient(#03112A 50%, rgb(28, 28, 88));
+        border: solid 2px green;
     }
     
     .transferConfirmationTopDiv{
