--- a/src/components/TransferConfirmation.css
+++ b/src/components/TransferConfirmation.css
@@ -93,7 +93,6 @@
         display: flex;
         flex-direction: column;
         background-image: linear-gradient(#03112A 50%, rgb(28, 28, 88));
-        border: solid 2px green;
     }
     
     .transferConfirmationTopDiv{
@@ -112,9 +111,11 @@
     
     .transferConfirmationHeader{
         margin-top: 2vh;
-        margin-left: 3vw;
+        margin-left: 7rem;
         font-size: 25px;
         color: white;
+        border: solid 2px green;
+
     }
     
     .transferConfirmationMiddleSection{
