changed the margin left to 2.5 rem

--- a/src/components/TransferConfirmation.css
+++ b/src/components/TransferConfirmation.css
@@ -122,7 +122,7 @@
         height: 44vh;
         width: 20rem;
         border: solid 2px gray;
-        margin-left: 4vw;
+        margin-left: 2.5rem;
     }
     
     .transferConfirmationTransferAmountText{
