--- a/src/components/TransferConfirmation.css
+++ b/src/components/TransferConfirmation.css
@@ -138,8 +138,8 @@
         color: rgb(139, 110, 35);
         height: 12vh;
         font-size: 65px;
-        margin-left: 19vw;
-        margin-top: 0;
+        margin-left: 28vw;
+        margin-top: 2vh;
         width: 10rem;
     }
     .transferConfirmationArrow{
