--- a/src/components/DepositComponent.css
+++ b/src/components/DepositComponent.css
@@ -107,7 +107,6 @@ align-self: center;
 margin-top: 3vh;
 }
 
-
 @media screen and (max-width: 576px)
 {
 
@@ -176,7 +175,7 @@ margin-top: 3vh;
         align-self: center;
         color: rgb(139, 110, 35);
         font-size: 50px;
-        margin-left: 6.5vw;
+        margin-left: 3.5vw;
         font-weight: 800;
         padding-right: .5vw;
     }
@@ -191,17 +190,18 @@ margin-top: 3vh;
         width: 12rem;
         padding-left: .5vw;
         margin-top: 1vh;
-
+        margin-left: 2vw;
     }
     
     .depositField::placeholder{
         background-color: #414E65;
-        height: 10vh;
-        font-size: 35px;
-        width: 12rem;
+        height: 3rem;
+        width: 8rem;
+        margin-left: 3rem;
         color: white;
         font-family: 'Titan One', cursive;
         border: solid 1px #414E65;
+        text-align: center;
     }
     
     .depositButton{
@@ -219,6 +219,7 @@ margin-top: 3vh;
     border-radius: 10px;
     align-self: center;
     margin-top: 3vh;
+
     }
     
 
