--- a/src/components/DeleteComponent.css
+++ b/src/components/DeleteComponent.css
@@ -82,18 +82,18 @@
     border-radius: 10px;
     align-self: center;
     width: 20vw;
-height: 8vh;
-border: solid 3px rgb(3, 17, 42);
-margin-bottom: 1vh;
-color: rgb(3, 17, 42);
-font-size: 30px;
-font-weight: 600;
-letter-spacing: 1.5px;
-background-color: rgb(139, 110, 35);
-font-size: 18px;
-border-radius: 10px;
-align-self: center;
-margin-top: 3vh;
+    height: 8vh;
+    border: solid 3px rgb(3, 17, 42);
+    margin-bottom: 1vh;
+    color: rgb(3, 17, 42);
+    font-size: 30px;
+    font-weight: 600;
+    letter-spacing: 1.5px;
+    background-color: rgb(139, 110, 35);
+    font-size: 18px;
+    border-radius: 10px;
+    align-self: center;
+    margin-top: 3vh;
 
 }
 
@@ -101,7 +101,104 @@ margin-top: 3vh;
 {
 
 
-
+    .fullDeleteComponent{
+        background-image: linear-gradient(45.34deg, rgb(0, 16, 43) 5.66%, #10203b 94.35%);
+        height: 60vh;
+        display: flex;
+        flex-direction: column;
+    }
     
-}
+    .toprow{
+        display: flex;
+        flex-direction: row;
+        margin-top: 1vh;
+    }
+    
+    .Xout{
+        margin-left: 2vw;
+        color: white;
+        height: 3vh;
+        font-size: 30px;
+        font-weight: 600;
+    }
+    
+    .deleteHeader{
+        font-family: 'Titan One', cursive;
+        letter-spacing: 1px;
+        font-size: 40px;
+        color: white;
+        margin-left: 28vw;
+        margin-bottom: 2vh;
+        margin-top: 5vh;
+        align-self: center;
+        border: solid 2px green;
 
+    }
+    
+    .deleteSection{
+        display: flex;
+        flex-direction: column;
+        background-color: #414E65;
+        height: 20vh;
+        width: 20vw;
+        align-self: center;
+        margin-top: 2vh;
+        margin-left: 2vh;
+        border-radius: 8px;
+    }
+    
+    .deleteSectionHeader{
+        height: 5vh;
+        color: white;
+        align-self: center;
+        margin-top: 2vh;
+    }
+    
+    .deletetype{
+        background-color: #414E65;
+        width: 8vw;
+        height: 8vh;
+        font-size: 30px;
+        color: white;
+        font-family: 'Titan One', cursive;
+        border: solid 1px #414E65;
+        border: solid 2px black;
+        align-self: center;
+    }
+    
+    .deletetype::placeholder{
+        background-color: #414E65;
+        width: 8vw;
+        height: 8vh;
+        font-size: 30px;
+        color: white;
+        font-family: 'Titan One', cursive;
+        border: solid 1px #414E65;
+        border: solid 2px black;
+        align-self: center;
+    }
+    
+    .deleteButton{
+        background-color: rgb(139, 110, 35);
+        font-size: 18px;
+        border-radius: 10px;
+        align-self: center;
+        width: 20vw;
+        height: 8vh;
+        border: solid 3px rgb(3, 17, 42);
+        margin-bottom: 1vh;
+        color: rgb(3, 17, 42);
+        font-size: 30px;
+        font-weight: 600;
+        letter-spacing: 1.5px;
+        background-color: rgb(139, 110, 35);
+        font-size: 18px;
+        border-radius: 10px;
+        align-self: center;
+        margin-top: 3vh;
+    
+    }
+    
+
+
+}
