--- a/src/components/DeleteConfirmation.css
+++ b/src/components/DeleteConfirmation.css
@@ -82,3 +82,94 @@
     width: 19vw;
     margin-left: .5vw;
 }
+
+
+@media screen and (max-width: 576px)
+{
+
+
+    .thefulldeleteComponent{
+        background-image: linear-gradient(45.34deg, rgb(0, 16, 43) 5.66%, #10203b 94.35%);
+        height: 60vh;
+        display: flex;
+        flex-direction: column;
+        z-index: 10;
+    }
+    
+    .thetoprow{
+        display: flex;
+        flex-direction: row;
+        margin-top: 1vh;
+    }
+    
+    .theXout{
+        margin-left: 2vw;
+        color: white;
+        height: 3vh;
+        font-size: 30px;
+        font-weight: 600;
+    }
+    
+    .thedeleteHeader{
+        font-family: 'Titan One', cursive;
+        letter-spacing: 1px;
+        font-size: 25px;
+        color: white;
+        margin-left: 3vw;
+        margin-bottom: 2vh;
+        margin-top: 2.5vh;
+        width: 15vw;
+    }
+    
+    .thedeleteSection{
+        display: flex;
+        flex-direction: column;
+        background-color: #414E65;
+        height: 20vh;
+        width: 20vw;
+        align-self: center;
+        margin-top: 5vh;
+        margin-left: 2vh;
+        border-radius: 8px;
+    }
+    
+    .thedeleteSectionHeader{
+        height: 5vh;
+        color: white;
+    }
+    
+    .thedeleteField{
+        background-color: #414E65;
+        height: 10vh;
+        width: 18vw;
+        font-size: 20px;
+        color: white;
+        font-family: 'Titan One', cursive;
+        border: solid 1px #414E65;
+        display: flex;
+        flex-flow: column;
+        align-self: center;
+    }
+    
+    .thedeleteField::placeholder{
+        background-color: #414E65;
+        height: 10vh;
+        font-size: 30px;
+        color: white;
+        font-family: 'Titan One', cursive;
+        margin-left: 1vw;
+        border: solid 1px #414E65;
+    }
+    
+    .deleteButton{
+        background-color: rgb(139, 110, 35);
+        font-size: 18px;
+        border-radius: 10px;
+        align-self: center;
+        width: 19vw;
+        margin-left: .5vw;
+    }
+    
+
+
+}
