--- a/src/components/DeleteConfirmation.css
+++ b/src/components/DeleteConfirmation.css
@@ -132,7 +132,6 @@
         margin-top: 5vh;
         margin-left: .5vh;
         border-radius: 8px;
-        border: solid 2px green;
 
     }
     
@@ -145,7 +144,7 @@
     .thedeleteField{
         background-color: #414E65;
         height: 10vh;
-        width: 18vw;
+        width: 14rem;
         font-size: 20px;
         color: white;
         font-family: 'Titan One', cursive;
@@ -153,6 +152,8 @@
         display: flex;
         flex-flow: column;
         align-self: center;
+        margin-left: 2vw;
+
     }
     
     .thedeleteField::placeholder{
